<resources>
    <string name="app_name" translatable="false">Sora</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="BottonGrupos">Grupos</string>
    <string name="BottonContactos">Contactos</string>
    <string name="BottonNotificaciones">Notificaciones</string>
    <string name="BottonPerfil">Perfil</string>
    <string name="nombreUsuario">Nombre del usuario</string>
    <string name="nombreCuenta">Nombre de la cuenta</string>
    <string name="sobreMi">Sobre mí</string>
    <string name="cerrarSesion">Cerrar sesión</string>

    <string name="presentacion">Bienvenid@ a Sora</string>
    <string name="iniciarSesion">Iniciar sesión</string>

    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="registrate">¿No estás registrado?</string>
    <string name="estasRegistrado">¿Estás registrado?</string>
    <string name="registrarse">Registrate</string>
    <string name="introduceNombre">El nombre de cuenta no puede estar vacío</string>
    <string name="introduceCorreo">El correo no puede estar vacío</string>
    <string name="introduceContrasena">La contraseña no puede estar vacía</string>
    <string name="repetirContrasena">Repite la contraseña</string>
    <string name="btnRegistrarse">Registrarse</string>

    <string name="añadirAmigo">Añadir contacto</string>
    <string name="añadirGrupo">Añadir grupo</string>
    <string name="buscar">Buscar</string>
    <string name="modificarPerfil">Ajustes</string>
    <string name="guardar">Guardar</string>

    <string name="errorRegistrarse">Ha ocurrido un error al registrarse</string>
    <string name="errorContrasena">Las contraseñas no coinciden</string>
    <string name="exitoRegistro">Te has registrado con éxito</string>
    <string name="errorServidor">El servidor se encuentra desconectado</string>
    <string name="errorCorreo">Correo electrónico en uso</string>
    <string name="errorInicioSesion">Error al iniciar sesión</string>
    <string name="exitoIniciarSesion">Inicio de sesión</string>
    <string name="modoVista">Has entrado en modo vista</string>

    <string name="cambiarIcono">Cambiar icono</string>
    <string name="modificarNombrePerfil">Cambiar nombre</string>
    <string name="modificarDescripcionPerfil">Modificar la descripción</string>

    <string name="agregarContacto">Agregar contacto</string>
    <string name="agregarGrupo">Agregar grupo</string>
    <string name="comoAgregarContacto">Envia una petición de solicitud de amistad a cualquier usuario solo introduciendo su nombre de cuenta</string>
    <string name="comoAgregarGrupo">Envia una petición de solicitud a cualquier grupo o buscalo introduciendo su nombre</string>

    <string name="confirmarCerrarSesion">¿Estás seguro de que quieres cerrar la sesión?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="SolicitudDeAmistad">Te han enviado una solicitud de amistad</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="errorNombreUsuario">El nombre de usuario no puede estar vacio</string>
    <string name="exitoModificacion">Los datos han sido modificados correctamente</string>
    <string name="fallorModificacion">Los datos no han sido modificados</string>
    <string name="errorModificarDaros">Ha ocurrido un error al modificar los datos por parte del servidor</string>
    <string name="seleccionaIcono">Selecciona el icono que mas te guste</string>
    <string name="cancelar">Cancelar</string>
    <string name="cerrar">Cerrar</string>
    <string name="enviarSolicitudAmistad">Enviar solicitud de amistad</string>
    <string name="verPerfil">Ver perfil</string>
    <string name="avisoEnviarSolicitudAmistad">La solicitud de amistad ha sido enviada</string>
    <string name="avisoErrorSolicitudAmistad">Error al enviar solicitud de amistad</string>
    <string name="aceptarSolicitudAmistad">Has aceptado la solicitud de amistad</string>
    <string name="rechazarSolicitudAmistad">Has rechazado la solicitud de amistad</string>
    <string name="actualizarNotificaciones">Actualizando...</string>

    <string name="escribirMensaje">Escribe un mensaje</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="errorEnviarMensaje">Ha ocurrido un error al enviar el mensaje</string>
    <string name="eliminarAmigo">Eliminar amigo</string>
    <string name="errorEliminarContacto">Error al eliminar el contacto</string>
    <string name="confirmacionContactoEliminado">El contacto se ha eliminado correctamente</string>
    <string name="crearGrupo">Crear nuevo grupo</string>
    <string name="escribeNombreGrupo">Escribe el nombre del nuevo grupo</string>
    <string name="crear">Crear</string>
    <string name="errorNombreGrupo">Introduce un nombre al grupo</string>
    <string name="exitoCreacionGrupo">El grupo se ha creado correctamente</string>
    <string name="errorCreacionGrupo">Ha ocurrido un error al crear el grupo</string>
    <string name="nombreGrupo">Nombre grupo</string>
    <string name="errorCargarGrupo">Error al cargar los grupos</string>
    <string name="unirse">Unirse</string>
    <string name="exitoUnirseGrupo">Te has unido al grupo con éxito</string>
    <string name="errorUnirseGrupo">Ha ocurrido un error al unirte al grupo</string>
    <string name="google" translatable="false">Google</string>
    <string name="usuariosUnidosAlGrupo">Usuarios que se han unido al grupo</string>
    <string name="expulsar">Expulsar</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminarGrupo">Eliminar grupo</string>
    <string name="exitoEliminarGrupo">El grupo ha sido eliminado</string>
    <string name="errorEliminarGrupo">El grupo no ha podido ser eliminado</string>
</resources>