<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView_Icono"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/icono_defecfo0"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/textView_NombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreUsuario"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="170dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView_NombreCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreCuenta"
        android:layout_marginTop="105dp"
        android:layout_marginLeft="171dp" />

    <TextView
        android:id="@+id/textViewSobreMi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobreMi"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewContenidoSobreMi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prueba descripción"
        android:layout_marginTop="195dp"
        android:layout_marginLeft="30dp" />

    <Button
        android:id="@+id/buttonCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cerrarSesion"/>

    <ImageButton
        android:id="@+id/imageButtonAjustes"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icono_ajustes" />


</RelativeLayout>