<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:backgroundTint="@color/fondo_oscuro"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:id="@+id/Contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/IconoPerfil"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icono_defecfo0"/>

        <TextView
            android:id="@+id/textNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreUsuario"
            android:textColor="@color/white"
            android:layout_toEndOf="@id/IconoPerfil"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textNombreCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreCuenta"
            android:layout_toEndOf="@id/IconoPerfil"
            android:textSize="15sp"
            android:layout_marginTop="35dp"
            android:paddingBottom="8dp"/>

        <Button
            android:id="@+id/buttonEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:textColor="@color/rojo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_marginLeft="190dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>