<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:backgroundTint="@color/fondo_menu"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/IconoPerfil"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/icono_defecfo0"/>

        <TextView
            android:id="@+id/textSolicitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/IconoPerfil"
            android:text="@string/SolicitudDeAmistad"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textNotificationNombreContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="-3dp"
            android:layout_toEndOf="@id/IconoPerfil"
            android:gravity="center"
            android:text="@string/nombreUsuario"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="35dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="65dp">
            <Button
                android:id="@+id/btnNotificacionAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptar"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:backgroundTint="@color/colorIcono_celeste"/>

            <Button
                android:id="@+id/btnNotificacionRechazar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rechazar"
                android:textColor="@color/colorIcono_celeste"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:backgroundTint="@color/fondo_menu"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>