<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmarCerrarSesion"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            
            <Button
                android:id="@+id/btnSi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/si"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:backgroundTint="@color/colorIcono_celeste"/>

            <Button
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:backgroundTint="@color/fondo_menu_oscuro"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>